[gd_scene load_steps=2 format=3 uid="uid://bqduy4u8regjo"]

[ext_resource type="Script" path="res://Scripts/HUD_Scripts/MainPage.gd" id="1_1jfau"]

[node name="MainPage" type="Node2D"]
script = ExtResource("1_1jfau")

[node name="BG" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -2.0
offset_right = 1029.0
offset_bottom = 604.0
color = Color(0.337255, 0.337255, 0.337255, 1)

[node name="MKenuMenu" type="ColorRect" parent="BG"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 1034.0
offset_bottom = 41.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Shop" type="Button" parent="BG/MKenuMenu"]
layout_mode = 0
offset_left = 21.0
offset_top = 7.0
offset_right = 103.0
offset_bottom = 38.0
text = "Shop"

[node name="Mineração" type="Button" parent="BG/MKenuMenu"]
layout_mode = 0
offset_left = 108.0
offset_top = 7.0
offset_right = 198.0
offset_bottom = 38.0
text = "Mineração"

[node name="Personagem" type="Button" parent="BG/MKenuMenu"]
layout_mode = 0
offset_left = 202.0
offset_top = 7.0
offset_right = 307.0
offset_bottom = 38.0
text = "Personagem"

[node name="Defender Point" type="Button" parent="BG/MKenuMenu"]
layout_mode = 0
offset_left = 311.0
offset_top = 7.0
offset_right = 436.0
offset_bottom = 38.0
text = "Defender Point"

[node name="SHOP" type="Node2D" parent="BG"]
position = Vector2(1, 0)

[node name="LOJA" type="ColorRect" parent="BG/SHOP"]
offset_left = 8.0
offset_top = 70.0
offset_right = 855.0
offset_bottom = 273.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="ITEMS" type="ColorRect" parent="BG/SHOP"]
offset_left = 855.0
offset_top = 298.0
offset_right = 1033.0
offset_bottom = 605.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="STATUS" type="ColorRect" parent="BG/SHOP"]
offset_left = 855.0
offset_top = 45.0
offset_right = 1033.0
offset_bottom = 296.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="MINHAS_COISAS___TROCA" type="Node2D" parent="BG/SHOP"]

[node name="MINHASCOISAS" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 7.0
offset_top = 297.0
offset_right = 854.0
offset_bottom = 602.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="TROCA" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
visible = false
offset_left = 13.0
offset_top = 297.0
offset_right = 778.0
offset_bottom = 583.0
color = Color(0.392157, 0.392157, 0.392157, 1)

[node name="MinhasCoisas" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 8.0
offset_top = 570.0
offset_right = 127.0
offset_bottom = 601.0
text = "Minhas Coisas"

[node name="Troca" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 132.0
offset_top = 570.0
offset_right = 222.0
offset_bottom = 601.0
text = "Troca"

[node name="SCROLL1" type="TextureButton" parent="BG/SHOP"]
offset_left = 12.0
offset_top = 116.0
offset_right = 222.0
offset_bottom = 241.0
ignore_texture_size = true
stretch_mode = 0

[node name="SCROLL2" type="TextureButton" parent="BG/SHOP"]
offset_left = 223.0
offset_top = 116.0
offset_right = 433.0
offset_bottom = 241.0
ignore_texture_size = true
stretch_mode = 0

[node name="SCROLL3" type="TextureButton" parent="BG/SHOP"]
offset_left = 432.0
offset_top = 116.0
offset_right = 642.0
offset_bottom = 241.0
ignore_texture_size = true
stretch_mode = 0

[node name="SCROLL4" type="TextureButton" parent="BG/SHOP"]
offset_left = 642.0
offset_top = 116.0
offset_right = 852.0
offset_bottom = 241.0
ignore_texture_size = true
stretch_mode = 0

[node name="Mineração" type="Node2D" parent="BG"]
visible = false

[node name="STATUS" type="ColorRect" parent="BG/Mineração"]
offset_left = 802.0
offset_top = 42.0
offset_right = 1033.0
offset_bottom = 604.0
color = Color(0.486275, 0.462745, 0.466667, 1)

[node name="SCROLLAREA" type="ColorRect" parent="BG/Mineração"]
offset_left = 22.0
offset_top = 58.0
offset_right = 787.0
offset_bottom = 569.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="Personagem" type="Node2D" parent="BG"]
visible = false

[node name="STATUS" type="ColorRect" parent="BG/Personagem"]
offset_left = 802.0
offset_top = 42.0
offset_right = 1033.0
offset_bottom = 604.0
color = Color(0.705882, 0.301961, 0.537255, 1)

[node name="SCROLLAREA" type="ColorRect" parent="BG/Personagem"]
offset_left = 22.0
offset_top = 58.0
offset_right = 787.0
offset_bottom = 569.0
color = Color(0.705882, 0.301961, 0.537255, 1)

[node name="Defender Point" type="Node2D" parent="BG"]
visible = false

[node name="STATUS" type="ColorRect" parent="BG/Defender Point"]
offset_left = 802.0
offset_top = 42.0
offset_right = 1033.0
offset_bottom = 604.0
color = Color(0.54902, 0.266667, 0.945098, 1)

[node name="SCROLLAREA" type="ColorRect" parent="BG/Defender Point"]
offset_left = 22.0
offset_top = 58.0
offset_right = 787.0
offset_bottom = 569.0
color = Color(0.54902, 0.266667, 0.945098, 1)

[connection signal="pressed" from="BG/MKenuMenu/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="BG/MKenuMenu/Mineração" to="." method="_on_mineração_pressed"]
[connection signal="pressed" from="BG/MKenuMenu/Personagem" to="." method="_on_personagem_pressed"]
[connection signal="pressed" from="BG/MKenuMenu/Defender Point" to="." method="_on_defender_point_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/MinhasCoisas" to="." method="_on_minhas_coisas_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/Troca" to="." method="_on_troca_pressed"]
